# mekatronikk_mega_prosjekt

./: README.md  tash show -p
bringup_robot/: README.md  setup.cfg  setup.py
bringup_robot/launch/: bringup_robot.launch.py
bringup_robot/scripts/: bringup_tmux.sh
bringup_robot/urdf/: camera_model.xacro  ur3_with_camera.urdf  ur3_with_camera.xacro
camera_processor/: README.md  package.xml  setup.py
camera_processor/camera_processor/: cube_tracker.py
camera_processor/config/: parameters.yaml
camera_processor/install/: local_setup.sh  setup.sh
camera_processor/launch/: camera_tracking.launch.py  cube_tracking.launch.py
camera_processor/log/: latest_build
camera_processor/resource/: calibrate_color.py  ost.yaml
input_handler/: README.md  package.xml  setup.py
input_handler/input_handler/: input_handler.py
input_handler/launch/: input_handler.launch.py
install/: local_setup.bash  local_setup.ps1  local_setup.sh  setup.sh
install/usb_cam2/share/usb_cam2/: package.xml
log/: latest_build
process_handler/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
process_handler/launch/: process_handler.launch.py
process_handler/process_handler/: process_handler.py
process_msgs/: CMakeLists.txt  README.md  package.xml
process_msgs/msg/: Cube.msg  CubeArray.msg  KeyEvent.msg  TaskFeedback.msg
robot_controller/: CMakeLists.txt  README.md  package.xml
robot_controller/config/: parameters.yaml
robot_controller_test/: CMakeLists.txt  package.xml
scene_handler/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
(+151 files in other folders)
