<?xml version="1.0"?>
<package format="3">
  <name>usb_cam2</name>
  <version>0.0.0</version>
  <description>Package to start usb cam node manually</description>
  <maintainer email="michael@example.com">michael</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>usb_cam2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
